2014-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* yannis.test, tests/arabicr.pl, tests/arabic.ovp (new):
	Shell script and data for a new test.
	* am/omegaware.am: Add the new test.

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* level1.opl, repeat.opl, repeated.opl, sample.ovp: Always use
	computed checksum.

2014-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* shorten.test, tests/shorten.opl (new): Shell script and data
	for a new test.
	* am/omegaware.am: Add the new test.

2014-07-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.web, ovp2ovf.web: Fixed a bug in computation of lf.
	* opl2ofm.{ch,web}: Adapted (more) to PLtoTF Version 3.6.
	* ovp2ovf.{ch,web}: Adapted (more) to VPtoVF Version 1.6.

2014-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/omegaware.am: Drop Automake conditional OMFONTS.
	Always build and test wofm2opl&Co (instead of ofm2opl&Co).
	* level1.test, ofonts.test, omfonts.test, overbmp.test,
	realnum.test, repeat.test, selectfont.test, specialhex.test:
	Adapted.
	* charwd.test, tests/charwd-r.pl, tests/charwd-v.vpl (new):
	Shell script and data for a new test.

2014-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* odvicopy.ch, odvicopy.web: Fixed a non-Web2C bug and several
	typos, mostly from Udo Wermuth <u.wermuth@icloud.com>.
	Removed some trivial diffs with ../dvicopy.web.

2014-01-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.web, ovf2ovp.web: Drop duplicate semicolon.

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.web: Adapted to TFtoPL Version 3.3.
	* opl2ofm.web: Adapted to PLtoTF Version 3.6.
	* ovf2ovp.web: Adapted to VFtpVP Version 1.4.
	* ovp2ovf.web: Adapted to VPtoVF Version 1.6.

2014-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* {ofm2opl,opl2ofm,ovf2ovp,ovp2ovf}.{ch,web}: Fix glitches in
	online printing of progress report.

2014-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.up, ovp2ovf.up: Update module numbers.
