@@ -2,6 +2,7 @@ texmf_scripts='
 adhocfilelist/adhocfilelist.sh
 bibexport/bibexport.sh
 dtxgen/dtxgen
+getmap/gpx2gps
 installfont/installfont-tl
 latexfileversion/latexfileversion
 listbib/listbib
