@@ -2664,7 +2664,7 @@ else begin case t of
 
 @ (More good stuff from \.{TFtoPL}.)
 
-@p function f(@!h:integer64;@!x,@!y:indx):indx; forward;@t\2@>
+@p function f(@!h,@!x,@!y:indx):indx; forward;@t\2@>
   {compute $f$ for arguments known to be in |hash[h]|}
 function eval(@!x,@!y:indx):indx; {compute $f(x,y)$ with hashtable lookup}
 var @!key:integer64; {value sought in hash table}
@@ -2676,7 +2676,7 @@ else eval:=f(h,x,y);
 end;
 
 @ Pascal's beastly convention for |forward| declarations prevents us from
-saying |function f(h:integer64;x,y:indx):indx| here.
+saying |function f(h,x,y:indx):indx| here.
 
 @p function f;
 begin case class[h] of
